# PlayingCards

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  report_dynamo_export.sarif  requirements.txt  requirements_dev.txt  tasks.py
.github/workflows/: tests.yaml
configs/: cloudbuild.yaml  config_gpu.yaml  hyperparams.yaml  sweep.yaml  vertex_ai_train.yaml
deployment/: api_v2.py  backend.py  frontend.py  label_converter.npy  requirements_api.txt  requirements_backend.txt  requirements_frontend.txt
dockerfiles/: api.dockerfile  api_v2.dockerfile  backend.dockerfile  frontend.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
reports/: README.md  report.html
src/playing_cards/: api.py  data.py  evaluate.py  model.py  train.py  train_cloud.py  visualize.py
src/project_mlops/: data.py  data_cloud.py  model.py  model_export.py  train.py  train_cloud.py  visualize.py
tests/: test_api.py  test_data.py  test_model.py
