[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playing_cards"
version = "0.0.1"
description = "Playing Cards Classification Project"
readme = "README.md"
authors = [
    {name = "Veroonika Tamm", email = "s250069@dtu.dk"},
    {name = "Stiina Salumets"}
]
requires-python = ">=3.11"
keywords = ["machine learning", "image classification", "playing cards"]
license = {text = "MIT"}

[tool.setuptools]
packages = ["playing_cards"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.coverage.run]
omit = ["tests/*"]
